force-app/main/default/objects/ReturnOrder/fields/SVMXA360__AssetId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Field to store the asset being returned. It is a lookup to an existing Asset record.</description>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>ReturnOrders</relationshipName>
    <type>Lookup</type>
</CustomField>