force-app/main/default/objects/ReturnOrder/fields/SVMXA360__AssetWarrantyId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__AssetWarrantyId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to store the Asset Warranty</description>
    <label>Asset Warranty</label>
    <referenceTo>AssetWarranty</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>