force-app/main/default/objects/ReturnOrder/fields/SVMXA360__CanceledById__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CanceledById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that canceled this return order. It is a lookup to an existing User record.</description>
    <label>Canceled By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CanceledByUserReturnOrders</relationshipName>
    <type>Lookup</type>
</CustomField>