force-app/main/default/objects/ReturnOrder/fields/SVMXA360__CanceledOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__CanceledOn__c</fullName>
    <description>The date on which the Return Order is canceled.</description>
    <label>Canceled On</label>
    <type>DateTime</type>
</CustomField>