force-app/main/default/objects/ReturnOrder/fields/SVMXA360__ClosedById__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ClosedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that closed this return order. It is a lookup to an existing User record.</description>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ClosedByUserReturnOrders</relationshipName>
    <type>Lookup</type>
</CustomField>