force-app/main/default/objects/ReturnOrder/fields/SVMXA360__ClosedOn__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ClosedOn__c</fullName>
    <description>The date on which the Return Order is closed.</description>
    <label>Closed On</label>
    <type>DateTime</type>
</CustomField>