force-app/main/default/objects/ReturnOrder/fields/SVMXA360__ContactEmail__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContactEmail__c</fullName>
    <description>Field to store the customer’s email</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>