force-app/main/default/objects/ReturnOrder/fields/SVMXA360__ContactPhone__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ContactPhone__c</fullName>
    <description>Field to store the customer’s phone number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>