force-app/main/default/objects/ReturnOrder/fields/SVMXA360__EntitlementId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitlementId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the entitlement record after performing the entitlement check.</description>
    <label>Entitled Service</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>