force-app/main/default/objects/ReturnOrder/fields/SVMXA360__EntitlementNotes__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EntitlementNotes__c</fullName>
    <description>Long text area to store additional entitlement notes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entitlement Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>