force-app/main/default/objects/ReturnOrder/fields/SVMXA360__PackingInstructions__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__PackingInstructions__c</fullName>
    <description>Packing/Handling instructions for the return.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Packing/Handling Instructions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>