force-app/main/default/objects/ReturnOrder/fields/SVMXA360__ServiceContractId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ServiceContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The ID of the Service Contract resulted after performing the entitlement check.</description>
    <label>Service Contract</label>
    <referenceTo>ServiceContract</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>Return_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>