force-app/main/default/objects/ReturnOrder/fields/SVMXA360__WorkOrderId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__WorkOrderId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicates the Work Order from which the Return Order is created</description>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Return Orders</relationshipLabel>
    <relationshipName>WorkOrderReturnOrders</relationshipName>
    <type>Lookup</type>
</CustomField>