force-app/main/default/objects/ReturnOrder/listViews/SVMXA360__AllReturnOrdersView.listView-meta.xml
<ListView>
    <fullName>SVMXA360__AllReturnOrdersView</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>ProductRequest</columns>
    <columns>Contact</columns>
    <columns>SVMXA360__WorkOrderId__c</columns>
    <columns>Case</columns>
    <columns>Account</columns>
    <columns>SourceLocation</columns>
    <columns>DestinationLocation</columns>
    <columns>ReturnedBy</columns>
    <filterScope>Everything</filterScope>
    <label>A360 - All Return Orders View</label>
</ListView>