force-app/main/default/objects/ReturnOrder/listViews/SVMXA360__ClosedReturnOrdersView.listView-meta.xml
<ListView>
    <fullName>SVMXA360__ClosedReturnOrdersView</fullName>
    <columns>Name</columns>
    <columns>ProductRequest</columns>
    <columns>Contact</columns>
    <columns>SVMXA360__WorkOrderId__c</columns>
    <columns>Case</columns>
    <columns>Account</columns>
    <columns>SourceLocation</columns>
    <columns>DestinationLocation</columns>
    <columns>ReturnedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <label>A360 - Closed Return Orders View</label>
</ListView>